Fix card link spacing and divider visibility

--- a/_sass/_sections.scss
+++ b/_sass/_sections.scss
@@ -92,8 +92,8 @@
   }
 }
 
-.card__link {
-  margin-top: 1.25rem;
+p.card__link {
+  margin-top: 1.25rem !important;
   padding-top: 1rem;
   border-top: 1px solid $color-rule;
 
